added questions segment, and highscore segments into the html with the intent to hide them

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
     <header>
         <nav>
-            <a href="#">View Highscores</a>
-                <div>
-                    <div id="timer">
+            <a>View Highscores</a>
+                    <div>
                     Time: 100
                     </div>
                 </div> 
@@ -29,6 +28,52 @@
     </section>
 
 
-    <script src="./assets/script.js"></script>
+    <section>
+        <div class="container">
+            <div class="row"><h2>Questions</h2></div>
+            <div class="row">Choices</div>
+
+                <div>
+                    <button>Continue</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+ 
+<section>
+    <div class="container">
+        <div class="row"><h1>All done!</h1></div>
+        <div class="row"><p>Your final score: <span id="finalscore">0</span></p></div>
+        <div class="row">
+            <form>
+                <div>
+                <label>Enter initials</label>
+                </div>
+                <div>
+                <input placeholder="Intials here">
+                </div>
+                <div>
+                <button>Submit</button>
+            </form>
+        </div>
+    </div>
+</section>
+
+
+<section>
+    <div class="container">
+        <div class="row"><h1>Highscores</h1></div>
+        <div class="row">
+            <button>Go back</button>
+            <button>Clear highscores</button>
+        </div>
+</section>
+
+
+
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
