--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
 
-    <section>
+    <section class="hide">
         <div class="container">
             <div class="row"><h2>Questions</h2></div>
             <div class="row">Choices</div>
@@ -42,7 +42,7 @@
     </section>
 
  
-<section>
+<section class="hide">
     <div class="container">
         <div class="row"><h1>All done!</h1></div>
         <div class="row"><p>Your final score: <span id="finalscore">0</span></p></div>
@@ -62,7 +62,7 @@
 </section>
 
 
-<section>
+<section class="hide">
     <div class="container">
         <div class="row"><h1>Highscores</h1></div>
         <div class="row">
