made the quiz work and timer deduct

--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
     </section>
 
 
-    <section class="hide" id="questionPage">
-        <div class="container" id="questionTitle">
-            <div>
-                <p><button id="btn1" class="btn btn-dark"></button></p>
-                <p><button id="btn2" class="btn btn-dark"></button></p>
-                <p><button id="btn3" class="btn btn-dark"></button></p>
-                <p><button id="btn4" class="btn btn-dark"></button></p>
-                <p id="checkAnswer"></p>
-            </div>
-            </div>
 
+    <div id="questionPage" class="hide">
+        <p id="questionTitle"></p>
+        <div>
+            <p><button id="btn1"></button></p>
+            <p><button id="btn2"></button></p>
+            <p><button id="btn3"></button></p>
+            <p><button id="btn4"></button></p>
+            <hr id="lineBreak" class="hide">  
+            <p id="answerCheck" class="hide"></p>
         </div>
-    </section>
+      </div>
+
+
+
 
  
 <section class="hide" id="finished">
