added readMe and a bit of text under the title

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav>
             <a id="viewHighScore" href="#">Highscores</a>
                     <div id= "time">
-                    <span id="timeLeft">0</span>
+                    <span id="timeLeft">60</span>
                     </div>
-                    <div id="timesUp">Time's Up!</div>
+                    <div id="timesUp"></div>
                 </div>
                     </div>
                 </div> 
@@ -30,6 +30,7 @@
     <section id="firstPage">
         <div class="container">
             <div class="row"><h1>The Quiz of Random Facts</h1></div>
+            <div class="row"><h2>Welcome to this truly random quiz of random facts, please do have fun!</h2></div>
             <div class="row"><button id="begin">Begin!</button></div>
         </div>
     </section>
